--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,8 @@ Description: Implementation of several distributions recently proposed and
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
+Depends: 
+    R (>= 3.5.1)
 Imports:
-    flexsurv,
-    maxLik
+    flexsurv (>= 1.1.0)
 RoxygenNote: 6.1.0
